# groq-local-project-onboarding-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  FolderOrganizer.command  README.md  fix_classifier.py  index_organizer.py  main.py  organizer.py  pyproject.toml  quick_organizer.py  requirements.txt
app/: __init__.py  agent.py  config.py  errors.py  groq_planner.py  mcp_client.py  organizer_launchd.py  organizer_service.py  organizer_types.py  policy.py  presets.py  prompting.py  rendering.py  schema.py
examples/: obsidian_folder_organizing_guide.md  sample_onboarding_report.json  sample_onboarding_report.md
gui/: organizer_gui.py
outputs/: README.md
samples/: example_requests.md  index_organizer_v2.example.yml  index_organizer_v2.obsidian_documents.yml  index_organizer_v2.obsidian_power_saver.yml
scripts/: __init__.py  after_repo_move.sh  audit_logger.py  check_health.py  docker_deploy.sh  docker_easy.sh  documents_depth_rebalance.py  documents_holdout_rehome.py  documents_korean_taxonomy_repair.py  documents_rehome_manifest.py  documents_structure_audit.py  documents_type_rehome.py  monitor.py  monitor_config.py  obsidian_link_audit.py  obsidian_stage_move.py  release_version.py  set_power_profile.sh
tests/: conftest.py  test_agent.py  test_config.py  test_documents_tooling.py  test_index_organizer_status.py  test_index_v2_domain_policy.py  test_index_v2_launchd.py  test_index_v2_naming.py  test_index_v2_output_repair.py  test_index_v2_workflow.py  test_main.py  test_organizer_launchd.py  test_organizer_service.py  test_policy.py  test_presets.py  (+2 more)
(+31 files in other folders)
